# glmadness

./: .gitignore  README.md
CI/: CI3ds.cpp  CI3ds.h  CICubeMap.cpp  CICubeMap.h  CIMd2.cpp  CIMd2.h  CIMd2Normals.cpp  CIMsg.cpp  CIMsg.h  CISG.cpp  CISG.h  CITrackBall.cpp  CITrackBall.h
MM/: MMGrid.cpp  MMGrid.h  MMSG.cpp  MMSG.h
QTMM/: CIGLWidget.cpp  CIGLWidget.h  CMakeLists.txt  QTMM.pro  initdialog.cpp  initdialog.h  initdialog.ui  main.cpp  mainform.cpp  mainform.h  mainform.ui  mainform.ui.h
SDLMM/: CMakeLists.txt  SDLMM.pro  main.cpp
bmf/: BMF_font.c  BMF_font.h
bmf/data/: fnt1.bmf  fnt2.bmf
levels/: default.xml  gluetest.xml  holetest.xml  icetest.xml  impacttest.xml  ramptest.xml  test.xml  veryhard.xml
vcg/: Matrix44.h  Plane3.h  Point2.h  Point3.h  Point4.h  Utility.h
